Everything is done butthe css of the answer buttons and question

--- a/index.html
+++ b/index.html
@@ -14,38 +14,38 @@
  	</script>
   </head>
   <body>
+    <h1>Dumb and Dumber: The Trivia Game</h1>
   	<div class = container>
+
       
-  		<div class ="row btn btn-primary startbtn">
-      start
-  		</div>
-      <div class ="row timer">
-      timer
+  		<button class ="startbtn">
+      Start
+  		</button>
+
+      <div class ="row fulltimer">
+      Time Remaining: <p class = timer></p> seconds
       </div>
       <div class="row iscorrect">
-      iscorrect
       </div>
-  		<div class ="row question">
-      question
-  		</div>
-  		<div class ="row answer1 answerbtn">
-      answer
-  		</div>
-  		<div class ="row answer2 answerbtn">
-      answer
-  		</div>
-  		<div class ="row answer3 answerbtn">
-      answer
-  		</div>
-  		<div class ="row answer4 answerbtn">
-      answer
-  		</div>
+      <section class=main>
+  		  <div class ="row question">
+  		  </div>
+  		  <div class ="row btn answer1 answerbtn">
+  		  </div>
+  		  <div class ="row btn answer2 answerbtn">
+  		  </div>
+  		  <div class ="row btn answer3 answerbtn">
+  		  </div>
+  		  <div class ="row btn answer4 answerbtn">
+  		  </div>
+      </section>
       <div class ="row para">
-      para
       </div>
       <div class ="row">
-        <div class ="btn btn-primary restartbtn">Restart
-        </div>
+        <button class ="restartbtn">
+      Restart
+      </button>
+
       </div>  
 
   	</div>
